Search and Layout Fixes
Some Layout Breaks too

--- a/css/magazine.css
+++ b/css/magazine.css
@@ -48,3 +48,30 @@
 .navigation li.active a {
     background-color: #3C8DC5;
 }
+
+
+    /*icon styles*/
+    .fi-social-facebook {
+        color: dodgerblue;
+        font-size: 2rem;
+    }
+    .fi-social-youtube {
+        color: red;
+        font-size: 2rem;
+    }
+    .fi-social-pinterest {
+        color: darkred;
+        font-size: 2rem;
+    }
+    i.fi-social-instagram {
+        color: brown;
+        font-size: 2rem;
+    }
+    i.fi-social-tumblr {
+        color: navy;
+        font-size: 2rem;
+    }
+    .fi-social-twitter {
+        color: skyblue;
+        font-size: 2rem;
+    }
